init: initializes the product details page

--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#2296f3" />
-        <meta name="title" content="Berry - React Material Admin Dashboard Template by CodedThemes" />
+        <meta name="title" content="KeyKeeper - Secure Authentication and Authorization Service" />
         <meta
             name="description"
-            content="Start your next React project with Berry admin template. It build with Reactjs, Material-UI, Redux, and Hook for faster web development."
+            content="KeyKeeper is a secure user authentication and authorization service. Ensure robust security and ease of use with seamless integration."
         />
-        <meta
-            name="keywords"
-            content="react admin template, material-ui react dashboard template, reactjs admin template, reactjs dashboard, react backend template"
-        />
-        <meta name="author" content="CodedThemes" />
+        <meta name="keywords" content="KeyKeeper, authentication, authorization, secure login, API key management, token validation" />
+        <meta name="author" content="Yog Sharma" />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
